# torch-mlir

./: pyproject.toml  pytorch-requirements.txt  setup.py  torchvision-requirements.txt
.github/workflows/: ci.yml  release.yml
build_tools/python_deploy/: install_cibuildwheel_deps.sh
include/torch-mlir/Dialect/TorchConversion/Transforms/: Passes.td
lib/Conversion/TorchToLinalg/: Uncategorized.cpp
lib/Dialect/TorchConversion/Transforms/: Passes.cpp
python/torch_mlir/extras/: annotate.py  fx_importer.py
scripts/: get_version.py
test/python/fx_importer/: meta_annotation_test.py
