[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [project]
# name = "torch-mlir"
# description = "First-class interop between PyTorch and MLIR"
# readme = "README.md"
# requires-python = ">=3.12"
# # These fields are produced by setup.py at wheel-build time.
# dynamic = ["version", "dependencies", "optional-dependencies"]

# [project.scripts]
# torch-mlir-import-onnx = "torch_mlir.tools.import_onnx.__main__:_cli_main"
# torch-mlir-opt = "torch_mlir.tools.opt.__main__:main"

[tool.black]
line-length = 88
target-version = ['py38']

# torch-mlir's Python package is produced by the CMake build (see the
# custom `build_py` in setup.py), not by setuptools' source-tree
# discovery. Disable auto-discovery so setuptools doesn't trip over
# top-level non-Python dirs (lib/, include/, projects/, ...).
[tool.setuptools]
packages = []

[tool.uv]
# torch-mlir is built via CMake (see setup.py / docs/development.md).
# Don't let `uv sync` try to build the package from source.
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[dependency-groups]
# Runtime deps mirrored from setup.py's INSTALL_REQUIRES.
runtime = [
    "numpy",
    "packaging",
]
torch = [
    "torch==2.12.0+cpu",
]
torchvision = [
    "torchvision==0.27.0+cpu",
]
onnx = [
    "onnx>=1.15.0",
]
build = [
    "wheel",
    "setuptools",
    "cmake",
    "ninja<1.13.0; sys_platform == 'win32'",
    "ninja; sys_platform != 'win32'",
    "packaging",
    "pyyaml",
    # Mirrored from externals/llvm-project/mlir/python/requirements.txt;
    # re-sync when the LLVM submodule is bumped.
    "nanobind>=2.9, <3.0",
    "PyYAML>=5.4.0, <=6.0.1",
    "typing_extensions>=4.12.2",
    "numpy>=2.1.0, <=2.1.2",
    "ml_dtypes>=0.5.0, <=0.6.0",
]
test = [
    "pillow",
    "dill",
    "multiprocess",
    "onnx==1.16.1",
    "mpmath==1.3.0",
]
dev = [
    { include-group = "runtime" },
    { include-group = "torch" },
    { include-group = "torchvision" },
    { include-group = "build" },
    { include-group = "test" },
]
